<resources>
    <string name="app_name">RefactoringLife4</string>
    <string name="tv_register_title">Register</string>
    <string name="et_register_name">Full name</string>
    <string name="et_register_email">E-mail address</string>
    <string name="et_register_password">Create password</string>

    <string name="login_bt_login">Iniciar sesión</string>
    <string name="login_tv_alert_Technical">Si tu cuenta no fue asociada al sistema, comunicate con <b>Soporte Técnico</b></string>
    <string name="login_bt_register">Registrar</string>
    <string name="login_bt_login_google">Iniciar sesión con Google</string>
    <string name="login_bt_Quest">Invitado</string>

    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="enter">Enter</string>
    <string name="login">LOGIN</string>
    <string name="arrow_back">arrow back</string>
    <string name="title_hello">Hola</string>
    <string name="title_human">Humano</string>
    <string name="welcome_question">Estas dispuesto a ver nuestros Perritos?</string>

    <string name="quieres_registrarte">quieres registrarte!</string>
    <string name="no_estas_registrado">No estas registrado</string>
    <string name="reintentar">REINTENTAR</string>
    <string name="registrar">REGISTRAR</string>
    <string name="felicitaciones">felicitaciones!</string>
    <string name="has_finalizado_el_registro">Has finalizado el registro</string>

    <string name="error_de_conexion">Error de conexion</string>

    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="term_and_condition">Terminos y condiciones</string>
    <string name="tv_home_search">Search</string>
    <string name="tv_home_friends">Friends</string>
    <string name="tv_home_adoptme">Adopt me</string>
    <string name="bt_home_search">Search</string>
    <string name="bt_home_us">Us</string>
    <string name="bt_home_dog">Dogs</string>
    <string name="bt_home_random">Random</string>
    <string name="terms_and_conditions_tv_terms_and_conditions">Lorem ipsum dolor sit amet consectetur adipiscing elit, conubia lacinia curabitur ac ligula gravida, odio nibh arcu fringilla litora congue. Condimentum ligula curabitur urna feugiat dictumst rutrum nullam orci fringilla, natoque hac eleifend nam felis pretium dapibus vehicula commodo maecenas, quis varius tellus semper cubilia dis mus eget. Libero mollis egestas volutpat dictum fusce curae commodo odio, sodales malesuada vehicula pretium cubilia felis ad ridiculus facilisis, bibendum vivamus et aenean sagittis pellentesque sapien. \n\nFusce hendrerit suspendisse mi laoreet ridiculus purus curabitur aenean integer, ornare mattis vehicula rhoncus fringilla hac diam mollis, inceptos congue natoque elementum conubia interdum commodo potenti. Sociis facilisi nunc nec morbi ultricies praesent ultrices, aliquam ligula consequat vehicula vitae. Blandit etiam nunc fringilla accumsan turpis curabitur sociis aenean bibendum, sagittis libero lectus dui arcu sem at tortor, fusce varius nulla ligula in cum elementum tempor.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="string_button_back_terms">VOLVER</string>

    <string name="tv_members">Members</string>
    <string name="tv_about_us">About Us</string>

    <string name="tv_details_food">Any diet must be appropriate for the dog. years. Clean, fresh water must be available at all times.</string>
    <string name="tv_details_doc">Learn how to care for your furry best friends health with expert veterinary advice.</string>
    <string name="tv_details_home">Explore tips on making your home a safe and welcoming place for your pet.</string>
    <string name="tv_details_dog_paw">Find out more about the additional care your pet deserves for a fulfilling and active life.</string>
    <string name="bt_details_text_return">Return</string>
    <string name="tv_details_adoptme">Adoptme</string>
    <string name="bt_home">volver al inicio</string>
    <string name="title_adopt_me">Gracias por elegirnos y adoptar a uno de nuestros perritos</string>
</resources>
