<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.presenter.HomeFragment">

    <TextView
        android:id="@+id/tv_home_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_home_search"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_home_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_home_friends"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_home_search"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_home_options"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_home_search">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_home_random"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_circle_white"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/bt_home_random"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_home_dog"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_circle_black"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/bt_home_dog"
            android:textColor="@color/white"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_home_us"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_circle_white"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/bt_home_us"
            android:textSize="12sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/bt_home_search"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_margin="10dp"
            android:layout_weight="1"
            android:background="@drawable/bt_circle_orange"
            android:elevation="10dp"
            android:fontFamily="@font/roboto_regular"
            android:text="@string/bt_home_search"
            android:textColor="@color/white"
            android:textSize="12sp" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:id="@+id/tv_home_adoptme"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="70dp"
        android:fontFamily="@font/roboto_regular"
        android:text="@string/tv_home_adoptme"
        android:textColor="@color/orange"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ll_home_options" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/home_rv_dogs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_adoptme"
        tools:listitem="@layout/item_rv_home_dogs" />

    <include
        android:id="@+id/error_view"
        layout="@layout/error_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_adoptme" />

    <include
        android:id="@+id/loading_view"
        layout="@layout/generic_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_home_adoptme" />

</androidx.constraintlayout.widget.ConstraintLayout>
