<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.aboutUs.presenter.AboutUsActivity">

    <TextView
        android:id="@+id/tv_us_search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_home_search"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_us_friends"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/roboto_black"
        android:text="@string/tv_home_friends"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/tv_us_search"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_back_home"
        android:layout_width="39dp"
        android:layout_height="49dp"
        android:layout_marginTop="23dp"
        android:layout_marginStart="30dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_us_search"
        app:srcCompat="@drawable/ic_back_login"
        android:contentDescription="@string/arrow_back"/>

    <TextView
        android:id="@+id/tv_members"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_members"
        android:textColor="@color/orange"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_back_home" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/us_rv_members"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_members"
        tools:listitem="@layout/item_rv_us_members" />

    <TextView
        android:id="@+id/tv_about_us"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/roboto_light"
        android:text="@string/tv_about_us"
        android:textColor="@color/black"
        android:textSize="36sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/us_rv_members" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/us_rv_about_us"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="horizontal"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_about_us"
        tools:listitem="@layout/item_rv_us_about_us" />

</androidx.constraintlayout.widget.ConstraintLayout>