<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginMailActivity">

    <ImageView
        android:id="@+id/iv_back_login"
        android:layout_width="39dp"
        android:layout_height="49dp"
        android:layout_marginTop="23dp"
        android:layout_marginEnd="330dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_back_login" />

    <TextView
        android:id="@+id/tv_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="320dp"
        android:layout_marginBottom="500dp"
        android:padding="11dp"
        android:text="@string/login"
        android:shadowColor="@color/black_lite"
        android:shadowRadius="5"
        android:shadowDy="10"
        android:fontFamily="@font/man_rope_regular"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_back_login" />

    <EditText
        android:id="@+id/et_email"
        android:inputType="textEmailAddress"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_login_mail_password"
        android:hint="@string/email_address"
        android:fontFamily="@font/man_rope_regular"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_login" />

    <EditText
        android:id="@+id/et_password"
        android:inputType="textPassword"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/border_login_mail_password"
        android:hint="@string/password"
        android:fontFamily="@font/man_rope_regular"
        android:maxLength="30"
        android:maxLines="1"
        android:padding="12dp"
        android:paddingStart="20dp"
        android:paddingEnd="0dp"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_email" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_enter_login"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/bt_black_state"
        android:enabled="false"
        android:text="@string/enter"
        android:textSize="18sp"
        android:fontFamily="@font/man_rope_regular"
        android:textColor="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_password" />
</androidx.constraintlayout.widget.ConstraintLayout>
