<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".RegisterActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <ImageView
        android:id="@+id/iv_register_back"
        android:layout_width="30dp"
        android:layout_height="40dp"
        android:layout_margin="30dp"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/tv_register_title"
        android:textColor="@color/black"
        android:textSize="35sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_register_back" />

    <EditText
        android:id="@+id/et_register_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bt_border_black"
        android:hint="@string/et_register_name"
        android:inputType="textPersonName"
        android:maxLines="1"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_register_title"
        tools:ignore="RtlSymmetry" />


    <EditText
        android:id="@+id/et_register_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bt_border_black"
        android:hint="@string/et_register_email"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_name"
        tools:ignore="RtlSymmetry" />

    <EditText
        android:id="@+id/et_register_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:background="@drawable/bt_border_black"
        android:hint="@string/et_register_password"
        android:inputType="textPassword"
        android:maxLines="1"
        android:paddingStart="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_register_email"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/bt_black_register"
        android:contentDescription="@string/tv_register_title"
        android:text="@string/tv_register_title"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_register_password" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <include
        android:id="@+id/in_loading"
        layout="@layout/generic_loading"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
         android:visibility="gone"/>


</RelativeLayout>
