<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_login"
    tools:context=".ui.login.LoginActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:scaleType="fitXY"
        android:src="@drawable/search_friend_svg"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintStart_toStartOf="@+id/gl_10"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ContentDescription" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_52"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_10"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.10" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_90"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.90" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login_google"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@drawable/border_radius_white"
        android:drawableStart="@drawable/google"
        android:fontFamily="@font/man_rope_regular"
        android:paddingStart="26dp"
        android:paddingTop="16dp"
        android:paddingEnd="26dp"
        android:paddingBottom="16dp"
        android:text="@string/login_bt_login_google"
        android:textAlignment="center"
        android:textSize="16sp"
        android:elevation="10dp"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintStart_toStartOf="@+id/gl_10"
        app:layout_constraintBottom_toTopOf="@+id/bt_login_fire_store"
        android:layout_marginBottom="16dp"
        tools:ignore="RtlSymmetry" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_login_fire_store"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_radius_black"
        android:fontFamily="@font/man_rope_regular"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_bt_login"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_register"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_radius_orange"
        android:fontFamily="@font/man_rope_regular"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_bt_register"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/bt_guest"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintStart_toStartOf="@+id/gl_10" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/bt_guest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:background="@drawable/border_radius_red_opaque"
        android:fontFamily="@font/man_rope_regular"
        android:paddingTop="16dp"
        android:paddingBottom="16dp"
        android:text="@string/login_bt_Quest"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:elevation="10dp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/gl_10" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/man_rope_regular"
        android:text="@string/login_tv_alert_Technical"
        android:textAlignment="center"
        android:textColor="@color/purple"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_90"
        app:layout_constraintStart_toStartOf="@+id/gl_10" />

</androidx.constraintlayout.widget.ConstraintLayout>
